--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
       <div class="main-container">
         <p class="main-footer__bottom-txt">
        
-          <a target="_blank" href="https://github.com/rammcodes/wowfolio">WowFolio</a> Open-Source Template
+          <a target="_blank" href="https://github.com/rammcodes/wowfolio">ProtoFolio</a> 
           <script>document.write(new Date().getFullYear())</script>. Made by
-          <a target="_blank" href="https://rammaheshwari.com">Ram Maheshwari</a>
+          <a target="_blank" href="https://rammaheshwari.com">Nagachaithanya</a>
         </p>
       </div>
     </div>
