--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
       <div class="main-container">
         <p class="main-footer__bottom-txt">
        
-          <a target="_blank" href="https://github.com/rammcodes/wowfolio">ProtoFolio</a> 
+          <p>ProtoFolio</p> 
           <script>document.write(new Date().getFullYear())</script>. Made by
-          <a target="_blank" href="https://rammaheshwari.com">Nagachaithanya</a>
+          <p>Nagachaithanya</p>
         </p>
       </div>
     </div>
